--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "next": "12.1.6",
+    "postcss": "^8.5.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
