--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "module": "esnext",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "moduleResolution": "node"
   },
   "include": [
